<resources>
    <string name="app_name">TMDB Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="celebrities">Celebrities</string>
    <string name="movie_title">Movie Title</string>
    <string name="tmdb">TMDB</string>
    <string name="trending">Trending</string>
    <string name="username">Username</string>
    <string name="favourite">Favourite</string>
    <string name="your_favourites_movies_amp_tv_shows"><![CDATA[Your favourites Movies & Tv Shows]]></string>
    <string name="watchlist">WatchList</string>
    <string name="movies_and_tvshows_added_to_watchlist">Movies and TvShows Added to watchlist</string>
    <string name="rated_movies_amp_tv_shows"><![CDATA[Rated Movies & Tv Shows]]></string>
    <string name="ratings">Ratings</string>
    <string name="appearances">Appearances</string>
    <string name="set_lite_amp_dark_theme"><![CDATA[Set Lite & Dark Theme]]></string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="search">Search</string>
    <string name="similar_search">Similar Search</string>
    <string name="collection">Collection</string>
    <string name="not_authorized_message">You are not signed in. Please sign in to your TMDB Clone account</string>
    <string name="under_development">This feature is under development</string>
    <string name="invalid_password_or_username">Invalid password or username</string>
    <string name="invalid_password">Invalid password, must be minimum 8 letters contain: [A–Z][a–z][0–9] </string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="empty_field">Empty field</string>
    <string name="check_your_internet_connection">Check your internet connection !</string>
    <string name="tap_to_retry">Tap to Retry</string>
</resources>