<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/moviesFragment"
        android:iconTint="@color/white"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvShowsFragment"
        android:iconTint="@color/white"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/celebritiesFragment"
        android:iconTint="@color/white"
        android:title="@string/celebrities" />

    <item
        android:id="@+id/searchFragment"
        android:iconTint="@color/white"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/TMDBFragment"
        android:iconTint="@color/white"
        android:title="@string/celebrities" />

</menu>