<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".presentation.tmdb.TMDBFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUserImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/app_green"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="Username"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/ivUserImage"
        app:layout_constraintStart_toEndOf="@id/ivUserImage"
        app:layout_constraintTop_toTopOf="@id/ivUserImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginorRegister"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:padding="5dp"
        android:text="@string/sign_in_sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <LinearLayout
        android:id="@+id/layoutFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@id/ivUserImage"
        app:layout_constraintStart_toStartOf="@id/ivUserImage"
        app:layout_constraintTop_toBottomOf="@id/btnLoginorRegister">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcFav"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_favourite"
            android:tint="@color/app_green"
            app:layout_constraintEnd_toEndOf="@id/ivUserImage"
            app:layout_constraintStart_toStartOf="@id/ivUserImage"
            app:layout_constraintTop_toBottomOf="@id/btnLoginorRegister" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:textColor="@color/app_green"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/ivIcFav"
                app:layout_constraintStart_toEndOf="@id/ivIcFav"
                app:layout_constraintTop_toTopOf="@id/ivIcFav" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFavDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_favourites_movies_amp_tv_shows"
                android:textColor="@color/app_gray"
                app:layout_constraintStart_toEndOf="@id/ivIcFav"
                app:layout_constraintTop_toBottomOf="@id/tvFav" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWatchList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@id/layoutFav"
        app:layout_constraintStart_toStartOf="@id/layoutFav"
        app:layout_constraintTop_toBottomOf="@id/layoutFav">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcWatchList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bookmark"
            android:tint="@color/app_green"
            app:layout_constraintEnd_toEndOf="@id/ivIcFav"
            app:layout_constraintStart_toStartOf="@id/ivIcFav"
            app:layout_constraintTop_toBottomOf="@id/ivIcFav" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWatchList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchlist"
                android:textColor="@color/app_green"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWatchListDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_and_tvshows_added_to_watchlist"
                android:textColor="@color/app_gray" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRatings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@id/layoutWatchList"
        app:layout_constraintStart_toStartOf="@id/layoutWatchList"
        app:layout_constraintTop_toBottomOf="@id/layoutWatchList">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcRatings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_star"
            android:tint="@color/app_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratings"
                android:textColor="@color/app_green"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRatingsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated_movies_amp_tv_shows"
                android:textColor="@color/app_gray" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@id/layoutRatings"
        app:layout_constraintStart_toStartOf="@id/layoutRatings"
        app:layout_constraintTop_toBottomOf="@id/layoutRatings">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcAppearance"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_brightness"
            android:tint="@color/app_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appearances"
                android:textColor="@color/app_green"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppearanceDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_lite_amp_dark_theme"
                android:textColor="@color/app_gray" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAppearance" />


</androidx.constraintlayout.widget.ConstraintLayout>